@@ -10,7 +10,7 @@ keywords
   "value" "print_codeproc" "code_thms" "code_deps" :: diag and
   "export_code" "code_identifier" "code_printing" "code_class" "code_instance" "code_type"
     "code_const" "code_reserved" "code_include" "code_modulename"
-    "code_abort" "code_monad" "code_reflect" :: thy_decl and
+    "code_monad" "code_reflect" :: thy_decl and
   "datatypes" "functions" "module_name" "file" "checking"
   "constant" "type_constructor" "type_class" "class_relation" "class_instance" "code_module"
 begin
